--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
-    "meteor-client": "meteor-client bundle -s api",
-    "start-server":"cd api && meteor run"
+    "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
     "@angular/common": "4.4.3",
@@ -31,21 +29,17 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
+    "eventsource": "^1.0.5",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "meteor-rxjs": "^0.4.8",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
-    "@types/meteor": "^1.4.8",
     "@types/underscore": "^1.8.3",
-    "babel-runtime": "^6.26.0",
-    "meteor-typings": "^1.4.1",
-    "tmp": "0.0.33",
     "typescript": "2.3.4",
     "typescript-extends": "^1.0.1"
   },
@@ -66,4 +60,3 @@
     "ionic_webpack": "./webpack.config.js"
   }
 }
-
