--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -9,16 +8,10 @@
       "dom",
       "es2015"
     ],
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
-    "target": "es5",
-    "skipLibCheck": true,
-    "stripInternal": true,
-    "noImplicitAny": false,
-    "types": [
-      "@types/underscore"
-    ]
+    "target": "es5"
   },
   "include": [
     "src/**/*.ts"
