--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "config": {
