--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.0",
     "async": "^2.6.0",
+    "cordova-android": "~6.3.0",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -37,8 +38,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
